--- a/views/index/index.phtml
+++ b/views/index/index.phtml
@@ -23,11 +23,11 @@
                 <form action="" method="post">
                      <input type="hidden" value="1" name="enviar"/>
                     <div class="input-group mb-3">
-                        <div class="form-floating"> <input id="usuario" name="usuario" type="text" class="form-control" value="" placeholder="" required> <label for="loginEmail">Usuario</label> </div>
+                        <div class="form-floating"> <input id="usuario" name="usuario" type="text" class="form-control" value="" placeholder="" required> <label for="usuario">Usuario</label> </div>
                         <div class="input-group-text"> <span class="bi bi-envelope"></span> </div>
                     </div>
                     <div class="input-group mb-3">
-                        <div class="form-floating"> <input id="password" name="password" type="password" class="form-control" placeholder="" required> <label for="loginPassword">Password</label> </div>
+                        <div class="form-floating"> <input id="password" name="password" type="password" class="form-control" placeholder="" required> <label for="password">Password</label> </div>
                         <div class="input-group-text"> <span class="bi bi-lock-fill"></span> </div>
                     </div> <!--begin::Row-->
                     <?php if (isset($this->_error)): ?>
